--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -45,6 +45,19 @@
             app:layout_constraintTop_toBottomOf="@+id/about_text" />
 
         <TextView
+            android:id="@+id/about_text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:fontFamily="@font/arial_rounded_bold"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:lineSpacingExtra="10dp"
+            android:text="@string/about_decimals"
+            app:layout_constraintTop_toBottomOf="@+id/about_link" />
+
+
+        <TextView
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
