--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -5,8 +5,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -16,7 +15,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background">
+                android:background="@color/background"
+                android:fitsSystemWindows="true">
 
                 <TextView
                     android:id="@+id/title"
@@ -40,6 +40,8 @@
                     android:background="@color/faded_blue"
                     android:fontFamily="@font/arial_rounded_bold"
                     android:hint="@string/type"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
                     android:maxLength="1000"
                     android:minHeight="150dp"
                     app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -69,7 +71,7 @@
                     android:text="@string/send"
                     android:textAllCaps="false"
                     android:textSize="25sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/info"
                     tools:layout_editor_absoluteX="30dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
